# m-ocr-mock-up

./: .gitignore  README.md  benchmark.py  debug_mrz.py  demo.py  deployment_optimized.yaml  publish.sh  pyproject.toml  reproduce_issue.py  reproduce_name_noise.py  reproduce_noisy_mrz.py  requirements.txt  setup.py  test_fuzzy.py
src/identity_ocr/: core.py  image.py  mrz.py  utils.py
src/passport_ocr/: core.py  fulltext.py  mrz.py
src/passport_ocr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
